--- a/index.html
+++ b/index.html
@@ -3,13 +3,45 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="style.css">
  <title>L I V E - S T R E M E</title>
 </head>
 <body>
  <main>
   <div class="container">
-   <h1>L I V E - S T R E M E</h1>
+     <div class="nav">
+      <button id="menu-btn">
+       <svg xmlns="http://www.w3.org/2000/svg" 
+       fill="none"
+       viewBox="0 0 24 24"
+       stroke-width="2"
+       stroke="currentColor"
+       class="size-6"
+       style="color: beige;"
+       >
+       <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+      </svg>
+      </button>
+<!--  -->
+      <div class="menu">
+       <ul id="menu__list">
+        <li>
+         <a href="#" name="video1">video 1</a>
+        </li>
+        <li>
+         <a href="#" name="video2">video 2</a>
+        </li>
+        <li>
+         <a href="#" name="video3">video 3</a>
+        </li>
+        <li>
+         <a href="#" name="video4">video 4</a>
+        </li>
+       </ul>
+      </div>
+     </div>
   </div>
  </main>
+ <script src="script.js" ></script>
 </body>
 </html>
