--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
       <main>
+            <div class="loader"></div>
             <div class="container">
                   <div class="nav">
                         <button id="menu-btn">
