--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
                         </div>
                   </div>
                   <div class="wrap">
+                        <div class="content">
+                              <div class="content__text">
+                                    <h1 class="content__title">
+                                          Добро пожаловать на <span>L I V E - S T R E M E</span>
+                                    </h1>
+                                    <p class="content__description">
+                                          Это проект создан для просмотра <span>Прямых эфиров и трансяций</span> замых
+                                          значимых событий и проектов.
+                                    </p>
+                              </div>
+                              <div class="content__footer">
+                                    Проект создан <span>Виталием Vitallios</span>, и исключительно для общего пользования.
+                              </div>
+                        </div>
                   </div>
             </div>
       </main>
@@ -34,6 +48,3 @@
 </body>
 
 </html>
-
-
-
