--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
                         <div class="content">
                               <div class="content__text">
                                     <h1 class="content__title">
-                                          Добро пожаловать на <span>L I V E - S T R E M E</span>
+                                          Добро пожаловать на<br> <span>L I V E - S T R E M E</span>
                                     </h1>
                                     <p class="content__description">
-                                          Это проект создан для просмотра <span>Прямых эфиров и трансяций</span> замых
+                                          Это проект создан для просмотра<br><span>Прямых эфиров и трансяций</span><br>cамых
                                           значимых событий и проектов.
                                     </p>
                               </div>
                               <div class="content__footer">
-                                    Проект создан <span>Виталием Vitallios</span>, и исключительно для общего пользования.
+                                    Проект создан 
+                                          <a href="https://t.me/@Vitallios">
+                                          Виталием Vitallios</a>, и исключительно для общего пользования.
                               </div>
                         </div>
                   </div>
