update text style

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                                           значимых событий и проектов.
                                     </p>
                               </div>
+                              <a class="content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A T</a>
                               <div class="content__footer">
                                     Проект создан 
                                           <a href="https://t.me/@Vitallios">
