add btn random films

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <div class="menu">
                               <ul id="menu__list">
                               </ul>
+                              <button id="rundomFilms">Случайный фильм</button>
                         </div>
                   </div>
                   <div class="wrap">
