--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
       <main>
+            <!-- loading -->
             <div class="loader"></div>
+
+            <!-- button menu -->
             <button id="menu-btn">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor" class="size-6">
@@ -18,15 +21,17 @@
                               d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                   </svg>
             </button>
+            <!-- menu -->
             <div class="container">
                   <div class="nav">
-                        <!--  -->
+                        <!-- content  -->
                         <div class="menu">
                               <ul id="menu__list">
                               </ul>
                               <button id="rundomFilms">Случайный фильм</button>
                         </div>
                   </div>
+                  
                   <div class="wrap">
                         <div class="content">
                               <div class="content__text">
@@ -34,14 +39,15 @@
                                           Добро пожаловать на<br> <span>L I V E - S T R E M E</span>
                                     </h1>
                                     <p class="content__description">
-                                          Это проект создан для просмотра<br><span>Прямых эфиров и трансяций</span><br>cамых
+                                          Это проект создан для просмотра<br><span>Прямых эфиров и
+                                                трансяций</span><br>cамых
                                           значимых событий и проектов.
                                     </p>
                               </div>
                               <a class="content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A T</a>
                               <div class="content__footer">
-                                    Проект создан 
-                                          <a href="https://t.me/@Vitallios">
+                                    Проект создан
+                                    <a href="https://t.me/@Vitallios">
                                           Виталием Vitallios</a>, и исключительно для общего пользования.
                               </div>
                         </div>
