--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
                         <div class="menu">
                               <ul id="menu__list">
                               </ul>
-                              <button id="rundomFilms">Случайный фильм</button>
+                              <div class="menu__btn">
+                                    <button id="rundomFilms">Случайный фильм</button>
+                              </div>
                         </div>
                   </div>
-                  
+
                   <div class="wrap">
                         <div class="content">
                               <div class="content__text">
