--- a/index.html
+++ b/index.html
@@ -29,28 +29,44 @@
                               <ul id="menu__list">
                               </ul>
                               <div class="menu__btn">
-                                    <button id="rundomFilms">Случайный фильм</button>
+                                    <button class="btn" id="rundomFilms">Случайный фильм</button>
                               </div>
                         </div>
                   </div>
 
                   <div class="wrap">
-                        <div class="content">
-                              <div class="content__text">
-                                    <h1 class="content__title">
-                                          Добро пожаловать на<br><span>L I V E - S T R E M E</span>
-                                    </h1>
-                                    <p class="content__description">
-                                          Это проект создан для просмотра<br><span>Прямых эфиров и
-                                                трансяций</span><br>cамых
-                                          значимых событий и проектов.
-                                    </p>
+                        <div class="wrap__pages">
+                              <div class="content info" id="info">
+                                    <div class="content__text">
+                                          <h1 class="content__title">
+                                                Добро пожаловать на<br><span>L I V E - S T R E M E</span>
+                                          </h1>
+                                          <p class="content__description">
+                                                Это проект создан для просмотра<br><span>Прямых эфиров и
+                                                      трансяций</span><br>cамых
+                                                значимых событий и проектов.
+                                          </p>
+                                          <button class="btn btn__to__content-home" id="btnToHome">H O M E</button>
+                                    </div>
+                                    <a class="btn content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A
+                                          T</a>
+                                    <div class="content__footer">
+                                          Проект создан
+                                          <a href="https://t.me/@Vitallios">
+                                                Виталием Vitallios</a>, и исключительно для общего пользования.
+                                    </div>
                               </div>
-                              <a class="content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A T</a>
-                              <div class="content__footer">
-                                    Проект создан
-                                    <a href="https://t.me/@Vitallios">
-                                          Виталием Vitallios</a>, и исключительно для общего пользования.
+                              <div class="content home" id="home">
+                                    <h2>home</h2>
+                                    <div class="top-slider">
+                                          <button class="slider-arrow left" aria-label="Previous slide">&lt;</button>
+                                          <button class="slider-arrow right" aria-label="Next slide">&gt;</button>
+                                          <div class="slides">
+
+                                          </div>
+                                          <div class="slider-nav">
+                                          </div>
+                                    </div>
                               </div>
                         </div>
                   </div>
