function play to data

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                               <div class="menu__btn">
                                     <button class="btn" id="rundomFilms">Случайный фильм</button>
                               </div>
+                              <div class="menu__home">
+                                    <button class="btn" id="MenuBtnToHome">H O M E</button>
+                              </div>
                         </div>
                   </div>
 
