setting list strime

--- a/index.html
+++ b/index.html
@@ -65,10 +65,14 @@
                                           <button class="slider-arrow left" aria-label="Previous slide">&lt;</button>
                                           <button class="slider-arrow right" aria-label="Next slide">&gt;</button>
                                           <div class="slides">
-
                                           </div>
                                           <div class="slider-nav">
                                           </div>
+                                    </div>
+                                    <div class="lists__sremes">
+                                          <ul id="listStrimes">
+                                                
+                                          </ul>
                                     </div>
                               </div>
                         </div>
