--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     </div>
                               </div>
                               <div class="content home" id="home">
-                                    <h2>home</h2>
+                                    <h2>Список стримов</h2>
                                     <div class="top-slider">
                                           <button class="slider-arrow left" aria-label="Previous slide">&lt;</button>
                                           <button class="slider-arrow right" aria-label="Next slide">&gt;</button>
@@ -71,7 +71,6 @@
                                     </div>
                                     <div class="lists__sremes">
                                           <ul id="listStrimes">
-                                                
                                           </ul>
                                     </div>
                               </div>
