--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                   <div class="nav">
                         <!-- content  -->
                         <div class="menu">
+                              <span>Онлайн каналы</span>
                               <ul id="menu__list">
                               </ul>
                               <div class="menu__btn">
