--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                                       трансяций</span><br>cамых
                                                 значимых событий и проектов.
                                           </p>
-                                          <button class="btn btn__to__content-home" id="btnToHome">H O M E</button>
+                                          <button class="btn btn__to__content-home" id="btnToHome">Лист трансляций</button>
                                     </div>
                                     <a class="btn content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A
                                           T</a>
