--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                                           </p>
                                           <button class="btn btn__to__content-home" id="btnToHome">Лист трансляций</button>
                                     </div>
-                                    <a class="btn content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A
-                                          T</a>
+                                    <!-- <a class="btn content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A
+                                          T</a> -->
                                     <div class="content__footer">
                                           Проект создан
                                           <a href="https://t.me/@Vitallios">
