--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   </div>
             </div>
       </main>
-      <script src="script.js"></script>
+      <script type="module" src="script.js"></script>
 </body>
 
 </html>
