--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
+      <!--  -->
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+      <!--  -->
       <link rel="stylesheet" href="style.css">
       <title>L I V E - S T R E M E</title>
 </head>
