--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
                                     </div>
                               </div>
                               <div class="content home" id="home">
-                                    <h2>Список стримов</h2>
+                                    <div class="home__header">
+                                          <h2>Список стримов</h2>
+                                          <div class="filter-buttons">
+                                          <!-- Кнопки будут добавлены динамически через JavaScript -->
+                                          </div>
+                                    </div>
 
                                     <div class="lists__sremes">
                                           <ul id="listStrimes">
