--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
                               </div>
                               <div class="menu__home">
                                     <button class="btn" id="MenuBtnToHome">
-                                          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-reply-fill" viewBox="0 0 16 16">
-                                                <path d="M5.921 11.9 1.353 8.62a.72.72 0 0 1 0-1.238L5.921 4.1A.716.716 0 0 1 7 4.719V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z"/>
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
+                                                fill="currentColor" class="bi bi-reply-fill" viewBox="0 0 16 16">
+                                                <path
+                                                      d="M5.921 11.9 1.353 8.62a.72.72 0 0 1 0-1.238L5.921 4.1A.716.716 0 0 1 7 4.719V6c1.5 0 6 0 7 8-2.5-4.5-7-4-7-4v1.281c0 .56-.606.898-1.079.62z" />
                                           </svg>
                                     </button>
                               </div>
@@ -53,7 +55,8 @@
                                                       трансяций</span><br>cамых
                                                 значимых событий и проектов.
                                           </p>
-                                          <button class="btn btn__to__content-home" id="btnToHome">Лист трансляций</button>
+                                          <button class="btn btn__to__content-home" id="btnToHome">Лист
+                                                трансляций</button>
                                     </div>
                                     <!-- <a class="btn content__donat" href="https://www.tbank.ru/cf/6TDIYSDId6O">D O N A
                                           T</a> -->
@@ -67,7 +70,7 @@
                                     <div class="home__header">
                                           <h2>Список стримов</h2>
                                           <div class="filter-buttons">
-                                          <!-- Кнопки будут добавлены динамически через JavaScript -->
+                                                <!-- Кнопки будут добавлены динамически через JavaScript -->
                                           </div>
                                     </div>
 
