add live strime

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
                               <div class="menu__btn">
                                     <button class="btn" id="rundomFilms">Случайный фильм</button>
                               </div>
+                              <!-- -->
+                              <div class="menu__donate">
+                                    <a class="btn" href="https://tips.tips/000460432">
+                                          <img src="./donat.jpg" alt="donat">
+                                    </a>
+                              </div>
+                              <!-- -->
                               <div class="menu__home">
                                     <button class="btn" id="MenuBtnToHome">
                                           <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
